[project]
name = "sentinel-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databento>=0.72.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "zstandard>=0.25.0",
]
